# tensorflow-lite-minimal-raspberry

./: CMakeLists.txt  converted_model.tflite  minimal.cc
